# MSU-CSC232-SP22

./: README.md
hws/hw01/: README.md  bio.md  release-notes.md  test_new_file.sh  test_update.sh
hws/hw01/.github/classroom/: autograding.json
hws/hw02/: .gitignore  CMakeLists.txt  README.md  hw02.uxf  run_ctest.sh  test_header_exists.sh  test_source_exists.sh
hws/hw02/.github/classroom/: autograding.json
hws/hw02/config/: Doxyfile.in
hws/hw02/include/: csc232.h  expanded_templates.h  magic_square.h  point.h
hws/hw02/resource/: csc232_clion_cpp_code_style.xml
hws/hw02/src/: demo.cpp  main.cpp  point.cpp
hws/hw02/test/: TESTING.md  tests.cpp
hws/hw03/: .gitignore  CMakeLists.txt  README.md  run_ctest.sh
hws/hw03/.github/workflows/: cmake.yml
hws/hw03/include/: csc232.h
hws/hw03/src/main/cpp/: demo.cpp  main.cpp
hws/hw03/src/main/resources/: main_data.txt
hws/hw03/src/test/cpp/: unit_tests.cpp
labs/lab01/: .gitignore  CMakeLists.txt  README.md  questions.txt  test_new_file.sh
labs/lab01/.github/classroom/: autograding.json
labs/lab01/src/: array.cpp  demo.cpp  main.cpp
labs/lab01/test/: TESTING.md
labs/lab02/: CMakeLists.txt  README.md
labs/lab02/config/: Doxyfile.in
labs/lab02/include/: csc232.h
labs/lab02/src/: main.cpp
labs/lab02/test/: test.cpp
labs/lab03/: .gitignore  CMakeLists.txt  LICENSE  README.md  class.uxf  run_ctest.sh  test_header_exists.sh  test_source_exists.sh
labs/lab03/.github/classroom/: autograding.json
labs/lab03/include/: csc232.h  expanded_templates.h  int_ptr_cell.h
labs/lab03/src/: demo.cpp  int_ptr_cell.cpp  main.cpp
labs/lab03/test/: test.cpp
labs/lab04/: CMakeLists.txt  README.md  run_ctest.sh  task1.sh  task2.sh  task3.sh
labs/lab04/.github/classroom/: autograding.json
labs/lab04/include/: bottomfib.h  csc232.h  fib.h  topfib.h
labs/lab04/src/: bottomfib.cpp  demo.cpp  topfib.cpp
labs/lab04/test/: TESTING.md  test.cpp
labs/lab05/: .gitignore  CMakeLists.txt  README.md  run_ctest.sh  task1.sh  task2.sh  task3.sh
labs/lab05/.github/classroom/: autograding.json
labs/lab05/include/: csc232.h  expanded_templates.h
labs/lab05/include/task1/: memory_cell.h
labs/lab05/include/task2/: memory_cell.cpp  memory_cell.h
labs/lab05/include/task3/: memory_cell.cpp  memory_cell.h
labs/lab05/src/main/cpp/: demo.cpp  main.cpp
labs/lab05/src/test/cpp/: unit_tests.cpp
labs/lab06/: .gitignore  CMakeLists.txt  README.md  run_ctest.sh
labs/lab06/.github/classroom/: autograding.json
labs/lab06/include/: array_bag.h  bag.h  csc232.h
labs/lab06/src/main/cpp/: array_bag.cpp  demo.cpp  main.cpp
labs/lab06/src/test/cpp/: unit_tests.cpp
labs/lab07/: CMakeLists.txt  README.md  task1.sh  task3.sh
labs/lab07/.github/classroom/: autograding.json
labs/lab07/.github/workflows/: cmake.yml
labs/lab07/include/: box.h  csc232.h  expanded_templates.h  magic_box.h  plain_box.h  toy_box.h
labs/lab07/src/main/cpp/: demo.cpp  magic_box.cpp  main.cpp  plain_box.cpp  toy_box.cpp
labs/lab07/src/test/cpp/: unit_tests.cpp
labs/lab09/: CMakeLists.txt  README.md
labs/lab09/.github/classroom/: autograding.json
labs/lab09/src/main/cpp/: Demo.cpp  Main.cpp  csc232.h
labs/lab09/src/test/cpp/: unit_tests.cpp
labs/lab10/: .gitignore  CMakeLists.txt  README.md  run_ctest.sh  task1.sh  task2.sh
labs/lab10/include/: csc232.h
labs/lab10/src/main/cpp/: main.cpp
